# CorreggiEXIF

./: .gitignore  Cargo.toml  README.md  USAGE_RUST.md  build.sh  corrigi_date_foto_gui.py  setup_git.sh  test_debug_json.rs
examples/: test_debug.rs
src/: gui.rs  main.rs
