[package]
name = "corrigi-exif"
version = "0.1.0"
edition = "2021"

[lints.rust]
# Sopprime warning di compatibilità futura da dipendenze transitive
# (ashpd è una dipendenza di rfd per il file dialog)
unused = "warn"

[dependencies]
exif = { package = "kamadak-exif", version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
rayon = "1.8"
num_cpus = "1.0"
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
